--- a/style5.css
+++ b/style5.css
@@ -1,7 +1,27 @@
-tabel{ 
-    width:100% ;
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
-tabel, th, td{
-    border:1px solid;
+table {
+    width: 500px;
+}
+table, th, td {
+    border: 1px solid black;
     border-collapse: collapse;
+}
+th {
+    height: 40px;
+    background-color: green;
+    color: white;
+}
+td {
+    text-align: center;
+}
+th, td {
+    padding: 5px;
+}
+tr:hover {
+    background-color: lightgreen;
+}
+tr:nth-child(even) {
+    background-color: #dedede;
 }
